--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "NODE_ENV=production next build",
+    "export": "NODE_ENV=production next export",
+    "build:static": "npm run build && npm run export",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
